--- a/src/styles.css
+++ b/src/styles.css
@@ -75,7 +75,7 @@ nav {
 
 nav button {
     flex: 1;
-    background-color: #c9ab87;
+    background-color: #d2ad96;
     color: black;
     font-size: 30px;
         font-family: "Aloevera";
@@ -97,15 +97,18 @@ h1 {
     align-items: center;
     padding: 50px 0;
 }
-.motto {
-    font-size: 3.015rem;
+
+.motto, .bottom {
     font-family: "Outfit", sans-serif;
+}
+
+.motto {
+    font-size: 2.8rem;
     text-align: center;
     font-weight: 500;
     line-height: 1.5;
     position: relative; 
     z-index:-1;
-
 }
 
 #brushStroke {
@@ -121,5 +124,76 @@ h1 {
     top: 47%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 60%;
+    width: 50%;
+}
+
+.bottom {
+    display: flex;
+    justify-content: space-around;
+}
+
+.bottom h2 {
+    font-weight: 600;
+    font-size: 2rem;
+    text-align: center;
+}
+
+#hoursBlock, .contact {
+    text-align: start;
+    flex: 1;
+    font-size: 1.3rem;
+    line-height: 1.2;
+}
+
+.hours {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'days hours';
+    column-gap: 15%;
+}
+
+.days {
+    grid-area: days;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.times {
+    grid-area: hours;
+    display: flex;
+    text-align: end;
+}
+
+.days, .times {
+    line-height: 1.5;
+}
+
+a {
+    color: black;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact > div {
+    flex: 1;
+    text-align: center;
+    line-height: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.bottom {
+    padding-bottom: 3vh;
+}
+
+.footer {
+    width: 100vw;
+    height: 5vh;
+    background-color: #d2ad96;
+    font-family: 'Outfit', sans-serif;
+    text-align: center;
 }
