--- a/src/styles.css
+++ b/src/styles.css
@@ -195,5 +195,8 @@ a {
     height: 5vh;
     background-color: #d2ad96;
     font-family: 'Outfit', sans-serif;
-    text-align: center;
+    font-style: italic;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
