--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,13 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+    /* scrollbar-gutter: stable both-edges; */
 }
+
+::-webkit-scrollbar {
+    display: none;
+}
+
 ol, ul {
 	list-style: none;
 }
@@ -96,8 +102,7 @@ h2 {
 
 .title {
     display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
+    flex-direction: column; 
     align-items: center;
     padding: 50px 0;
 }
@@ -194,7 +199,7 @@ a {
 }
 
 .footer {
-    width: 100vw;
+    width: 100%;
     height: 5vh;
     background-color: #d2ad96;
     font-family: 'Outfit', sans-serif;
@@ -220,7 +225,7 @@ a {
     padding: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    row-gap: 5%;
+    row-gap: 10%;
 }
 
 .tea-menu h2{
