--- a/src/styles.css
+++ b/src/styles.css
@@ -238,3 +238,18 @@ a {
     gap: 5px;
 }
 
+#aboutUs {
+    display: flex;
+    flex-direction: column;
+}
+
+#aboutUs h1 {
+    font-family: 'Outfit', sans-serif;
+    font-weight: 500;
+    text-align: center;
+}
+
+#aboutUs img {
+    align-self: center;
+    border-radius: 10%;
+}
